# rkbeets

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
beetsplug/: __init__.py  rkbeets.py
beetsplug/doc/: Rekordbox Fields.md
beetsplug/rkbeets/: __init__.py  command.py  config_default.yaml  core.py  rkbeets-fields.csv
doc/: Rekordbox Fields.md  mapping.md  project.md
rkbeets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/beetsplug/: rkbeets-fields.csv  rkbeets.py
test/: ddb1.csv  test_rkbeets.py
