[metadata]
name = rkbeets
version = attr: beetsplug.rkbeets.VERSION
description = A beets plugin for integrating with Rekordbox
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players :: MP3
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    beets>=1.6.0
    pandas
    pyrekordbox @ git+https://github.com/voigtjr/pyrekordbox@master
    tqdm

[options.packages.find]
exclude =
    doc*
